--- a/app/src/main/res/layout/activity_answer_security_questions.xml
+++ b/app/src/main/res/layout/activity_answer_security_questions.xml
@@ -9,7 +9,7 @@
     android:scrollbarThumbVertical="@null"
     tools:context=".">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -48,7 +48,7 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
 
                 android:id="@+id/questionError"
                 android:layout_width="match_parent"
@@ -63,9 +63,10 @@
                     android:hint="What is your favorite book?"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
             <Button
@@ -83,7 +84,7 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 
