--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,9 +8,9 @@
     android:padding="16dp"
     android:scrollbarThumbVertical="@null"
     android:visibility="visible"
-    tools:context=".">
+    tools:context=".ChangePassword">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -34,9 +34,10 @@
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center_horizontal" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/pw1Error"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -49,9 +50,9 @@
                     android:hint="Enter Password"
                     android:inputType="textPassword" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/pw2Error"
                 android:layout_width="match_parent"
                 android:layout_height="80dp">
@@ -63,7 +64,7 @@
                     android:ems="10"
                     android:hint="Re-enter Password"
                     android:inputType="textPassword" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/submitNewPassword"
@@ -78,5 +79,5 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </ScrollView>
