--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
     tools:context=".RegisterActivity">
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         xmlns:Card_View="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
 
 
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
 
                 android:id="@+id/firstNameError"
                 android:layout_width="match_parent"
@@ -46,11 +46,12 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
 
                 android:id="@+id/lastNameError"
                 android:layout_width="match_parent"
@@ -66,15 +67,16 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
-
-
-
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-            <android.support.design.widget.TextInputLayout
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/nameError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -89,11 +91,12 @@
                     android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,11 +111,12 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
 
                 android:id="@+id/gender"
                 android:layout_width="match_parent"
@@ -138,9 +142,9 @@
                 </RadioGroup>
 
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/phoneError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -156,11 +160,12 @@
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/passError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -176,11 +181,12 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/Re_enter_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -196,9 +202,10 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:paddingStart="5dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:paddingLeft="5dp" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/register"
@@ -222,6 +229,6 @@
                 android:textSize="16sp"/>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </ScrollView>
