--- a/app/src/main/res/layout/activity_answer_security_questions.xml
+++ b/app/src/main/res/layout/activity_answer_security_questions.xml
@@ -48,6 +48,11 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
+            <Spinner
+                android:id="@+id/securityQuestions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <com.google.android.material.textfield.TextInputLayout
 
                 android:id="@+id/questionError"
@@ -60,7 +65,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:hint="What is your favorite book?"
                     android:maxLines="1"
                     android:paddingStart="5dp"
                     android:singleLine="true"
