--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -12,6 +13,11 @@
             android:id="@+id/nav_gallery"
             android:icon="@drawable/baseline_analytics_24"
             android:title="@string/menu_gallery" />
+
+        <item
+            android:id="@+id/viewDashboard"
+            android:icon="@drawable/ic_home_tab"
+            android:title="View Dashboard" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_logout_24dp"
