--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -76,25 +76,25 @@
 
 
 
-<!--            <com.google.android.material.textfield.TextInputLayout-->
-<!--                android:id="@+id/nameError"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="5dp">-->
+            <!--            <com.google.android.material.textfield.TextInputLayout-->
+            <!--                android:id="@+id/nameError"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="5dp">-->
 
-<!--                <EditText-->
-<!--                    android:id="@+id/name"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:hint="@string/Username"-->
-<!--                    android:inputType="textNoSuggestions"-->
-<!--                    android:maxLines="1"-->
-<!--                    android:paddingStart="5dp"-->
-<!--                    android:singleLine="true"-->
-<!--                    android:paddingLeft="5dp" />-->
+            <!--                <EditText-->
+            <!--                    android:id="@+id/name"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_marginTop="10dp"-->
+            <!--                    android:hint="@string/Username"-->
+            <!--                    android:inputType="textNoSuggestions"-->
+            <!--                    android:maxLines="1"-->
+            <!--                    android:paddingStart="5dp"-->
+            <!--                    android:singleLine="true"-->
+            <!--                    android:paddingLeft="5dp" />-->
 
-<!--            </com.google.android.material.textfield.TextInputLayout>-->
+            <!--            </com.google.android.material.textfield.TextInputLayout>-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailError"
@@ -124,6 +124,7 @@
                 android:layout_marginTop="5dp">
 
                 <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/radGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -156,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="@string/phone_number"
-                    android:maxLength="5"
+                    android:maxLength="10"
                     android:inputType="number"
                     android:maxLines="1"
                     android:paddingStart="5dp"
