--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
             android:icon="@drawable/ic_home_tab"
             android:title="View Dashboard" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/logout"
             android:icon="@drawable/ic_logout_24dp"
             android:title="Logout" />
     </group>
