--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:Card_View="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
@@ -40,7 +41,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/pw1Error"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true">
 
                 <EditText
                     android:id="@+id/newPassword1"
@@ -55,7 +57,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/pw2Error"
                 android:layout_width="match_parent"
-                android:layout_height="80dp">
+                android:layout_height="80dp"
+                app:passwordToggleEnabled="true">
 
                 <EditText
                     android:id="@+id/newPassword2"
@@ -71,7 +74,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button_gradient"
-                android:onClick="changePassword"
                 android:text="Submit"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
