--- a/app/src/main/res/layout/activity_post_ad1.xml
+++ b/app/src/main/res/layout/activity_post_ad1.xml
@@ -1,164 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="#00FFFFFF"
     tools:context=".PostAd">
 
-    <ScrollView
+
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay"
+        tools:ignore="MissingConstraints">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="432dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_anchor="@+id/appBarLayout"
+            app:layout_anchorGravity="center"
+            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">
 
-            <androidx.appcompat.widget.Toolbar
+
+            <LinearLayout
+                android:id="@+id/PostAdLayout"
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:background="@drawable/button_gradient"
-                android:id="@+id/loginToolbar"
-                tools:ignore="MissingConstraints">
+                android:layout_height="wrap_content">
 
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif-medium"
+                    android:paddingLeft="0dp"
+                    android:gravity="center"
+                    android:text="Post Advertisement"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    app:navigationIcon="@drawable/ic_menu_24dp">
 
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_keyboard_arrow_left"
-                        android:background="@null"
-                        android:tint="#ffffff"
-                        android:id="@+id/btnBack"
-                        />
+                </TextView>
 
 
 
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.appcompat.widget.Toolbar>
+            </LinearLayout>
 
 
+        </androidx.appcompat.widget.Toolbar>
 
 
-            <EditText
-                android:id="@+id/inputPostTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:background="@drawable/text_background"
-                android:hint="Post Title"
-                android:drawableStart="@drawable/ic_text_fields_black_24dp"
-                android:drawableTint="@color/colorPrimaryDark"
-                android:drawablePadding="5dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="16dp"
-                android:inputType="text"
-                app:layout_constraintTop_toBottomOf="@+id/ivProductImage"
-                android:drawableLeft="@drawable/ic_text_fields_black_24dp"
-                tools:ignore="UnknownId" />
-
-            <EditText
-                android:id="@+id/inputPostDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:background="@drawable/text_background"
-                android:hint="Post Description"
-                android:inputType="textMultiLine"
-                android:drawableStart="@drawable/ic_description_black_24dp"
-                android:drawableTint="@color/colorPrimaryDark"
-                android:drawablePadding="5dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/inputPostTitle"
-                android:drawableLeft="@drawable/ic_description_black_24dp" />
-
-            <TextView
-                android:id="@+id/PostCategorySpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/text_background"
-                android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
-                android:drawableTint="@color/colorPrimaryDark"
-                android:drawablePadding="5dp"
-                android:padding="10dp"
-                android:text="Post Category"
-                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/inputPostDescription"
-                android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
-                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp" />
+    </com.google.android.material.appbar.AppBarLayout>
 
 
 
-            <EditText
-                android:id="@+id/inputProductPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:background="@drawable/text_background"
-                android:hint="Product Price"
-                android:drawableStart="@drawable/ic_shopping_cart_black_24dp"
-                android:drawableTint="@color/colorPrimaryDark"
-                android:drawablePadding="5dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="16dp"
-                android:inputType="number"
-                app:layout_constraintTop_toBottomOf="@+id/PostCategorySpinner"
-                android:autofillHints=""
-                android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
-                tools:ignore="UnknownId" />
-
-
-
-            <ImageView
-                android:id="@+id/SelectImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_column="0"
-                android:layout_row="0"
-                app:layout_constraintTop_toBottomOf="@+id/inputProductPrice"
-                android:layout_margin="3dp"
-                android:textAllCaps="false"
-                android:src="@drawable/upload_img"
-                tools:ignore="MissingConstraints,NotSibling" />
-
-
-            <Button
-                android:id="@+id/btnAddProduct"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_corner"
-                android:text="Post Advertisement"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="32dp"
-                android:textColor="#ffffff"
-                android:textSize="16sp"
-                android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/SelectImage" />
+    <include layout="@layout/post_ad" />
 
 
 
 
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
