--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,63 +8,76 @@
     tools:context=".NavigationDrawer1">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="116dp"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
-
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="375dp"
+            android:layout_width="432dp"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:layout_anchor="@+id/appBarLayout"
+            app:layout_anchorGravity="center"
             app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">
 
-        </androidx.appcompat.widget.Toolbar>
+
+
 
         <LinearLayout
+            android:id="@+id/DashboardSearchlayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/DashboardSearchlayout">
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-medium"
+                android:paddingLeft="0dp"
+                android:gravity="center"
+                android:text="MarKUTApp"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:navigationIcon="@drawable/ic_menu_24dp">
+
+            </TextView>
 
             <SearchView
                 android:id="@+id/search"
-                android:layout_width="198dp"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
                 android:baselineAligned="false"
-                android:iconifiedByDefault="true">
+                android:label="Search"
+                android:hint="Search"
+                android:iconifiedByDefault="true"
+                android:visibility="visible"
+                tools:visibility="visible">
 
             </SearchView>
 
             <Spinner
                 android:id="@+id/searchCategories"
-                android:layout_width="177dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
                 android:visibility="visible"
                 tools:visibility="visible" />
 
-        </LinearLayout>
+
+
+
+
+             </LinearLayout>
+
+
+        </androidx.appcompat.widget.Toolbar>
+
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_main" />
 
-<!--    <ListView-->
-<!--        android:id="@+id/list"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="50dp"></ListView>-->
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/sell"
@@ -72,6 +85,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        android:contentDescription="TODO" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
