--- a/app/src/main/res/layout/post_ad.xml
+++ b/app/src/main/res/layout/post_ad.xml
@@ -81,34 +81,47 @@
         tools:ignore="UnknownId" />
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="127dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/SelectImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_column="0"
-        android:layout_row="0"
-        app:layout_constraintTop_toBottomOf="@+id/inputProductPrice"
-        android:layout_margin="3dp"
-        android:textAllCaps="false"
-        android:src="@drawable/upload_img"
-        tools:ignore="MissingConstraints,NotSibling"
-        android:contentDescription="TODO" />
+        <ImageView
+            android:id="@+id/SelectImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_margin="3dp"
+            android:contentDescription="TODO"
+            android:src="@drawable/upload_img"
+            android:textAllCaps="false"
+            app:layout_constraintTop_toBottomOf="@+id/inputProductPrice"
+            tools:ignore="MissingConstraints,NotSibling" />
 
+        <Switch
+            android:id="@+id/deactivate"
+            android:layout_width="wrap_content"
+            android:layout_height="106dp"
+            android:text="   Deactivate Ad" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnAddProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/btn_corner"
         android:text="Post Advertisement"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
         android:textColor="#ffffff"
         android:textSize="16sp"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SelectImage" />
+
+
 </LinearLayout>
