--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,27 +30,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="sans-serif-medium"
-                android:paddingLeft="0dp"
-                android:gravity="center"
-                android:text="MarKUTApp"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                app:navigationIcon="@drawable/ic_menu_24dp">
-
-            </TextView>
-
             <SearchView
                 android:id="@+id/search"
-                android:layout_width="120dp"
+                android:layout_width="154dp"
                 android:layout_height="match_parent"
                 android:baselineAligned="false"
-                android:label="Search"
-                android:hint="Search"
+                android:hint="Search MarkUTApp"
                 android:iconifiedByDefault="true"
+                android:label="Search"
                 android:visibility="visible"
                 tools:visibility="visible">
 
@@ -58,7 +45,7 @@
 
             <Spinner
                 android:id="@+id/searchCategories"
-                android:layout_width="100dp"
+                android:layout_width="179dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:visibility="visible"
