--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -13,14 +13,43 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="432dp"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_anchor="@+id/appBarLayout"
-            app:layout_anchorGravity="center"
-            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="432dp"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:background="?attr/colorPrimary"-->
+<!--            app:layout_anchor="@+id/appBarLayout"-->
+<!--            app:layout_anchorGravity="center"-->
+<!--            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">-->
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleGravity="top"
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"/>
+
+                <TextView
+                    android:id="@+id/postAdTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center"
+                    android:layout_marginLeft="45dp"
+                    android:text="markUTApp Dashboard"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    app:navigationIcon="@drawable/ic_menu_24dp">
+
+                </TextView>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
 
@@ -28,24 +57,28 @@
         <LinearLayout
             android:id="@+id/DashboardSearchlayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <SearchView
                 android:id="@+id/search"
-                android:layout_width="154dp"
+                android:layout_width="180dp"
+                android:layout_marginStart="10dp"
                 android:layout_height="match_parent"
                 android:baselineAligned="false"
                 android:hint="Search MarkUTApp"
                 android:iconifiedByDefault="true"
                 android:label="Search"
                 android:visibility="visible"
-                tools:visibility="visible">
+                tools:visibility="visible"
+                android:layout_marginLeft="10dp">
 
             </SearchView>
 
             <Spinner
                 android:id="@+id/searchCategories"
-                android:layout_width="179dp"
+                android:layout_marginStart="5dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:visibility="visible"
@@ -58,7 +91,7 @@
              </LinearLayout>
 
 
-        </androidx.appcompat.widget.Toolbar>
+<!--        </androidx.appcompat.widget.Toolbar>-->
 
 
     </com.google.android.material.appbar.AppBarLayout>
