--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/linearLayout1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/button_gradient"
     android:gravity="bottom"
     android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -13,32 +13,59 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/colorPrimary"
-        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_gradient"
+        android:orientation="horizontal"
         android:visibility="visible"
         tools:visibility="visible">
 
+
+
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom|center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center"
             android:textStyle="bold"
-            android:paddingTop="5px"
-            android:text="markUTApp"
-            android:textSize="30sp" />
+            android:text="markUT"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="45dp" />
+
+        <ImageView
+            android:id="@+id/profile"
+            android:layout_width="36dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="-5dp"
+            android:layout_marginTop="2dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/uta"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:layout_gravity="center"
+            android:layout_marginLeft="1dp"
+            android:textStyle="bold"
+            android:text="pp"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="45dp" />
+
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView100"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="11dp"
         android:drawableBottom="@color/Black"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#000"
-        android:textSize="18sp" />
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/textView101"
