New xml (view ad list)

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -36,7 +36,7 @@
                     app:layout_collapseMode="pin"/>
 
                 <TextView
-                    android:id="@+id/postAdTitle"
+                    android:id="@+id/appTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="sans-serif-medium"
