--- a/app/src/main/res/layout/ad_list.xml
+++ b/app/src/main/res/layout/ad_list.xml
@@ -14,14 +14,10 @@
         android:orientation="horizontal"
         android:padding="10dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
 
             <androidx.cardview.widget.CardView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_gravity="center_vertical"
                 app:cardElevation="4dp"
                 app:cardPreventCornerOverlap="false">
@@ -30,66 +26,61 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/iv_que_item"
+                    android:layout_gravity="left"
                     android:padding="5dp" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/iv_que_item"-->
-                <!--                    android:layout_width="130dp"-->
-                <!--                    android:layout_height="130dp"-->
-                <!--                    android:padding="5dp" />-->
-
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            >
+            android:layout_marginLeft="10dp">
             <TextView
                 android:id="@+id/adID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:paddingStart="5dp"
-                android:textColor="@android:color/darker_gray"
-                android:id="@+id/ad_price"
-                android:hint="null"
-                android:paddingLeft="5dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:textColor="@android:color/black"
-                android:id="@+id/ad_title"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:paddingStart="5dp"
-                android:paddingLeft="5dp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginRight="20dp"
-                android:gravity="center_vertical|right">
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center"
+                    android:text="$"
+                    android:textColor="@android:color/darker_gray" />
+
+
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="20sp" android:layout_marginLeft="2dp"
+                android:textColor="@android:color/black"
+                android:id="@+id/ad_price"
+                android:hint="null"
+                    android:layout_marginStart="2dp" />
+
+
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     android:id="@+id/report_btn"
+                    android:layout_marginLeft="100dp"
                     android:textColor="@color/red"
                     android:textSize="15sp"
-                    android:text="Report"
-                    android:padding="5dp"/>
+                    android:text="Report" />
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -99,11 +90,39 @@
                     android:id="@+id/report_btn_logo"
                     android:padding="5dp"/>
 
+                </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="@android:color/black"
+                android:id="@+id/ad_title"
+                android:textStyle="bold"
+                android:hint="Null"
+                android:padding="10dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:paddingStart="5dp"
+                android:paddingLeft="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Last updated on"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="italic"
+                />
+
+            <TextView
+                android:id="@+id/view_dashboard_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="italic"
+                android:hint="null"
+                android:textColor="@color/colorPrimary"
+                />
 
 
-
-
-            </LinearLayout>
 
         </LinearLayout>
 
