--- a/app/src/main/res/layout/ad_list.xml
+++ b/app/src/main/res/layout/ad_list.xml
@@ -56,7 +56,8 @@
                     android:textSize="20sp"
                     android:layout_gravity="center"
                     android:text="$"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textStyle="bold"
+                    android:textColor="@android:color/black" />
 
 
                 <TextView
@@ -64,6 +65,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"
+                android:textStyle="bold"
                 android:id="@+id/ad_price"
                     android:layout_marginLeft="2dp"
                 android:hint="null"
