--- a/app/src/main/res/layout/ad_list.xml
+++ b/app/src/main/res/layout/ad_list.xml
@@ -32,12 +32,12 @@
             </androidx.cardview.widget.CardView>
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp">
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/adID"
                 android:layout_width="wrap_content"
@@ -46,83 +46,91 @@
 
 
             <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textSize="20sp"
                     android:layout_gravity="center"
                     android:text="$"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
 
                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="20sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:id="@+id/ad_price"
+                    android:id="@+id/ad_price"
+                    android:layout_width="124dp"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="2dp"
-                android:hint="null"
-           />
-
+                    android:hint="null"
+                    android:text="10000"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
                     android:id="@+id/report_btn"
-                    android:layout_marginLeft="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="Report"
                     android:textColor="@color/red"
-                    android:textSize="15sp"
-                    android:text="Report" />
+                    android:textSize="15sp" />
 
                 <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_outlined_flag_24"
-                    android:background="@android:color/transparent"
                     android:id="@+id/report_btn_logo"
-                    android:padding="5dp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_baseline_outlined_flag_24" />
 
-                </LinearLayout>
+
+            </LinearLayout>
+
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textColor="@android:color/black"
                 android:id="@+id/ad_title"
-                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:hint="Null"
+                android:text="Title for an add 2017 model"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                />
+                android:textColor="@android:color/black"
+                android:textSize="22dp"
+                android:textStyle="bold" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Last updated on"
                 android:layout_marginTop="5dp"
+                android:text="Last updated on"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="italic"
-                />
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/view_dashboard_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="italic"
                 android:hint="null"
                 android:textColor="@color/colorPrimary"
-                />
+                android:textStyle="italic" />
 
+            <Button
+                android:id="@+id/admin_deactivate_btn"
+                android:layout_width="140dp"
+                android:layout_height="20dp"
+                android:background="@drawable/rounded_corners"
+                android:text="Deactivate"
+                android:layout_marginTop="10dp"
+                android:textColor="#FFF" />
 
 
         </LinearLayout>
