--- a/app/src/main/res/layout/my_listings.xml
+++ b/app/src/main/res/layout/my_listings.xml
@@ -62,8 +62,8 @@
 
                 <TextView
                     android:id="@+id/ad_price"
-                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_width="124dp"
                     android:layout_marginLeft="2dp"
                     android:hint="null"
                     android:textColor="@android:color/black"
@@ -71,16 +71,19 @@
                     android:textStyle="bold" />
 
 
-                <TextView
+                <Button
                     android:id="@+id/editAd"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="100dp"
+                    android:layout_height="34dp"
+                    android:background="@drawable/rounded_corners_edit"
                     android:clickable="true"
                     android:text="Edit"
-                    android:textSize="15sp" />
+                    android:textColor="#FFF"
+                    android:textSize="22sp" />
+
 
             </LinearLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -93,6 +96,10 @@
                 android:hint="Null"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 />
+
+
+
+
 
             <TextView
                 android:layout_width="wrap_content"
