--- a/app/src/main/res/layout/post_ad.xml
+++ b/app/src/main/res/layout/post_ad.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:fillViewport="true"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <EditText
         android:id="@+id/inputPostTitle"
@@ -19,7 +25,7 @@
         android:drawableLeft="@drawable/ic_text_fields_black_24dp"
         android:drawablePadding="5dp"
         android:drawableTint="@color/colorPrimaryDark"
-        android:hint="Post Title"
+        android:hint="Title"
         android:inputType="text"
         android:padding="10dp"
         tools:ignore="UnknownId" />
@@ -36,7 +42,7 @@
         android:drawableLeft="@drawable/ic_description_black_24dp"
         android:drawablePadding="5dp"
         android:drawableTint="@color/colorPrimaryDark"
-        android:hint="Post Description"
+        android:hint="Description"
         android:inputType="textMultiLine"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/inputPostTitle" />
@@ -56,7 +62,7 @@
         android:drawablePadding="5dp"
         android:drawableTint="@color/colorPrimaryDark"
         android:padding="10dp"
-        android:text="Post Category"
+        android:text="Category"
         app:layout_constraintTop_toBottomOf="@+id/inputPostDescription" />
 
 
@@ -73,7 +79,7 @@
         android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
         android:drawablePadding="5dp"
         android:drawableTint="@color/colorPrimaryDark"
-        android:hint="Product Price"
+        android:hint="Price"
         android:inputType="number"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/PostCategorySpinner"
@@ -140,6 +146,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SelectImage" />
+    </LinearLayout>
 
+</ScrollView>
 
-</LinearLayout>
